# crawler

./: .cursorrules  .gitignore  ANTI_SCRAPING_STRATEGIES.md  CLI_COMMAND_EXPLAINED.md  COOKIES_PERSISTENCE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_GUIDE.md  UV_CLI_GUIDE.md  XIAOHONGSHU_DOWNLOAD_IMAGES_USAGE.md  XIAOHONGSHU_USAGE.md  pyproject.toml  setup.sh
application/: README.md  __init__.py  dto.py  use_cases.py  xiaohongshu_download_use_cases.py  xiaohongshu_use_cases.py
config/: search_keywords.json
domain/: README.md  __init__.py  entities.py  exceptions.py  repositories.py  services.py  value_objects.py
examples/: basic_crawler.py  database_demo.py  xiaohongshu_browse.py
infrastructure/: README.md  __init__.py  config.py  repositories.py
infrastructure/adapters/: __init__.py  base_browser_service.py  playwright_service.py  xiaohongshu_service.py
infrastructure/database/: init_db.py  mappers.py  models.py  session.py
infrastructure/utils/: __init__.py  pdf_converter.py  word_generator.py
interface/: README.md  __init__.py
interface/cli/: __init__.py  main.py
